# mazeio

./: Cargo.toml  README.md  build.rs
client/: Cargo.toml
client/src/: main.rs  model.rs  ui.rs
dummy-client/: Cargo.toml
dummy-client/src/: main.rs
mazeio-client/: Cargo.toml
mazeio-client/src/: main.rs  model.rs  ui.rs
mazeio-server/: Cargo.toml
mazeio-server/src/: main.rs
mazeio-shared/: Cargo.toml
mazeio-shared/src/: lib.rs
proto/: mazeio.proto
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
src/: client.rs  main.rs  server.rs  shared.rs
tui-client/: Cargo.toml
tui-client/src/: main.rs
