[package]
name = "mazeio-go"
version = "0.1.0"
authors = ["Andrew Lee <candrewlee14@gmail.com>"]
edition = "2018"

[[bin]]
name = "mazio-server"
path = "src/server.rs"

[[bin]]
name = "mazio-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
prost = "0.9"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
rand = "0.8"
uuid = {version = "0.8", features = [ "v4" ]}

[build-dependencies]
tonic-build = "0.6"
