[package]
name = "mazeio-server"
version = "0.1.0"
authors = ["Andrew Lee <candrewlee14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
futures = "*"
tokio = {version = "1", features=["rt-multi-thread", "macros", "net", "io-util", "sync", "time"]}
serde = {version="*", features=["derive"]}
serde_json = "*"
tracing = { version = "0.1", features = ["log","max_level_trace", "release_max_level_warn"] }
tracing-subscriber = "0.2"

