[package]
name = "mazeio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tonic-web = "0.2"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
dotenv = "0.15"
mazeio-shared = {path = "../shared"}
